Extensions: Setting Content-Type when loading from bundle.

Settinig the mime type when loading a file from a resource bundle
(*.pak).

Bug: 800136
Change-Id: I1f7c00eb505a2643e982f551027f90594181924f
Reviewed-on: https://chromium-review.googlesource.com/830654
Commit-Queue: Chris Mumford <cmumford@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527846}
Former-commit-id: 9f87e39793ff9228f4d0f0731e3131a85afb707e